# fashion-style-recommender

./: .gitattributes  .gitignore  README.md  app.py  environment.yaml  pyproject.toml  requirements.txt  requirements_spaces.txt
app/: demo.py
configs/: config.yaml
scripts/: train_detection.py  train_detection_v2.py  validate_dataset.py
src/api/: main.py  routes.py  schemas.py
src/data/: dataset.py  downloader.py  preprocessor.py
src/detection/: detector.py  pipeline.py
src/models/: clip_encoder.py  similarity.py
src/search/: indexer.py  retriever.py
src/training/: evaluator.py  trainer.py
tests/: test_api.py  test_clip_encoder.py  test_dataset.py  test_detector.py  test_detector_finetuned.py  test_downloader.py  test_faiss_search.py  test_finetune.py  test_lora_encoder.py  test_pipeline.py  test_preprocessor.py  test_puma_image.py  test_similarity.py
