# pyproject.toml

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-style-recommender"
version = "0.1.0"
description = "CLIP-based Fashion Style Similarity & Recommender"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]